Use node-uuid instead of uuid.js
That shaves ~50kB off the minified bundle.

Close #2019

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma-ng-html2js-preprocessor": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^1.20.1",
+    "node-uuid": "^1.4.3",
     "phantomjs": "^1.9.7"
   },
   "engines": {
