--- a/conf/test.ini
+++ b/conf/test.ini
@@ -9,6 +9,7 @@ sqlalchemy.url: sqlite://
 webassets.base_dir: h:static
 webassets.base_url: assets
 webassets.coffee_no_bare: True
+webassets.cache: False
 webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
