Use testext.ini when building test extensions
Using development.ini to test extension builds isn't ideal, because
basemodel.create_all is set to True, which attempts to contact
ElasticSearch, which isn't running on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ script:
   - make test
   - make cover
   - make lint
-  - hypothesis-buildext conf/development.ini chrome --base http://localhost
-  - hypothesis-buildext conf/development.ini firefox --base http://localhost
+  - hypothesis-buildext conf/testext.ini chrome --base http://localhost
+  - hypothesis-buildext conf/testext.ini firefox --base http://localhost
   - "hypothesis-buildext conf/production.ini chrome
     --base https://hypothes.is
     --assets chrome-extension://notarealkey/public"
