--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -3,6 +3,12 @@ use: egg:h
 
 es.host: http://localhost:9200
 
+h.feature.accounts: True
+h.feature.api: True
+h.feature.claim: True
+h.feature.streamer: True
+h.feature.notification: True
+
 sqlalchemy.url: sqlite://
 
 webassets.base_dir: h:static
