--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean-css": "2.2.2",
     "coffee-script": "1.7.1",
     "coffeeify": "^1.0.0",
+    "hammerjs": "^2.0.4",
     "node-uuid": "^1.4.3",
     "uglify-js": "2.4.14"
   },
@@ -80,6 +81,7 @@
     "diff-match-patch": "diff_match_patch",
     "dom-text-mapper": "DomTextMapper",
     "dom-text-matcher": "DomTextMatcher",
+    "hammerjs": "Hammer",
     "jquery": "$",
     "jquery-scrollintoview": {
       "depends": [
