--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install coveralls
   - pip install mandrill
   - pip install prospector
+  - npm install --save-dev jscs
   - make
 services:
   - elasticsearch
