--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uglify-js": "2.4.14"
   },
   "devDependencies": {
+    "jscs": "^1.12.0",
     "karma": "^0.12.17",
     "karma-browserify": "^3.0.3",
     "karma-cli": "0.0.4",
