Tweak the jshintrc file

--- a/.jshintrc
+++ b/.jshintrc
@@ -4,28 +4,23 @@
     "freeze": true,
     "latedef": "nofunc",
     "maxcomplexity": 10,
-    "node": true,
     "strict": true,
     "undef": true,
     "unused": true,
-    "predef": ["-Promise"],
     "globals": {
-        "chrome": true,
-        "document": true,
-        "window": true,
-        "localStorage": true,
-        "JSON": true,
-        "Promise": true,
-        "h": true,
-        "describe": true,
-        "it": true,
-        "chai": true,
-        "sinon": true,
-        "assert": true,
-        "beforeEach": true,
-        "afterEach": true,
-        "angular": true,
-        "XMLHttpRequest": true
-    }
+      "chrome": false,
+      "h": false,
+      "Promise": false,
+      "angular": false,
+      "chai": false,
+      "moment": false,
+      "jstz": false,
+      "sinon": false,
+      "JSON": false
+    },
+    "browser": true,
+    "browserify": true,
+    "mocha": true,
+    "phantom": true,
+    "jquery": true
 }
-
