--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coffee-script": "1.7.1",
     "coffeeify": "^1.0.0",
     "es6-promise": "^2.1.0",
+    "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
     "node-uuid": "^1.4.3",
     "uglify-js": "2.4.14"
