Remove browserify-pipe
This is totally safe unless there is another input filter before
browserify, but let's just say that's not allowed because it
simplifies things nicely to not have this extra script.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -64,7 +64,8 @@ webassets.cache: False
 webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
-webassets.browserify_pipe_bin: bin/browserify-pipe
+webassets.browserify_bin: node_modules/.bin/browserify
+webassets.browserify_extra_args: --extension=.coffee
 
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
