--- a/conf/production.ini
+++ b/conf/production.ini
@@ -67,6 +67,7 @@ webassets.cache: False
 webassets.cache_max_age: 31536000
 webassets.manifest: False
 webassets.static_view: True
+webassets.browserify_extra_args: --extension=.coffee
 
 
 [filter:proxy-prefix]
