--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -20,7 +20,8 @@ webassets.manifest: False
 webassets.static_view: True
 webassets.uglifyjs_bin: node_modules/.bin/uglifyjs
 webassets.cleancss_bin: node_modules/.bin/cleancss
-webassets.browserify_pipe_bin: bin/browserify-pipe
+webassets.browserify_bin: node_modules/.bin/browserify
+webassets.browserify_extra_args: --extension=.coffee
 
 
 [loggers]
