Isolate Hammer and Promise from AMD loaders

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "diff-match-patch": "./h/static/scripts/vendor/diff_match_patch_uncompressed.js",
     "dom-text-mapper": "./h/static/scripts/vendor/dom_text_mapper.js",
     "dom-text-matcher": "./h/static/scripts/vendor/dom_text_matcher.js",
+    "es6-promise": "./node_modules/es6-promise/dist/es6-promise.js",
+    "hammerjs": "./node_modules/hammerjs/hammer.js",
     "jquery": "./h/static/scripts/vendor/jquery.js",
     "jquery-scrollintoview": "./h/static/scripts/vendor/jquery.scrollintoview.js",
     "jschannel": "./h/static/scripts/vendor/jschannel.js",
@@ -83,6 +85,7 @@
     "diff-match-patch": "diff_match_patch",
     "dom-text-mapper": "DomTextMapper",
     "dom-text-matcher": "DomTextMatcher",
+    "es6-promise": "ES6Promise",
     "hammerjs": "Hammer",
     "jquery": "$",
     "jquery-scrollintoview": {
