--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
     "node-uuid": "^1.4.3",
-    "uglify-js": "2.4.14"
+    "uglify-js": "^2.4.14"
   },
   "devDependencies": {
     "karma": "^0.12.17",
