Use the same db in .ini for prod and dev

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -51,7 +51,7 @@ redis.sessions.cookie_max_age: 2592000
 redis.sessions.timeout: 604800
 
 # SQLAlchemy configuration -- See SQLAlchemy documentation
-sqlalchemy.url: sqlite:///h.db
+sqlalchemy.url: sqlite:///.h.db
 
 # http://docs.pylonsproject.org/projects/pyramid-jinja2/en/latest/index.html#jinja2-extensions
 jinja2.extensions: h.jinja_extensions:IncludeRawExtension
