Disable the webassets cache in production
It is only used for rebuilds, so it makes little sense in production
anyway.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -63,7 +63,9 @@ jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 #   webassets.base_url: https://static.example.com
 webassets.base_dir: h:static
 webassets.base_url: assets
+webassets.cache: False
 webassets.cache_max_age: 31536000
+webassets.manifest: False
 webassets.static_view: True
 
 
