Include pyramid_redis_sessions in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install coveralls
   - pip install mandrill
   - pip install prospector
+  - pip install pyramid_redis_sessions
   - make
 services:
   - elasticsearch
