Use index as post-activate, post-logout page
Now that we have login/signup on our homepage, this makes sense in
production, and the defaults and harmony between dev/prod become
a step better.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -32,8 +32,7 @@ horus.allow_email_auth: True
 horus.require_activation: False
 
 horus.login_redirect: stream
-horus.logout_redirect: login
-horus.activate_redirect: stream
+horus.logout_redirect: index
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
