--- a/conf/production.ini
+++ b/conf/production.ini
@@ -27,8 +27,7 @@ h.feature.notification: True
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
 horus.login_redirect: stream
-horus.logout_redirect: login
-horus.activate_redirect: login
+horus.logout_redirect: index
 
 #horus.allow_email_auth: False
 #horus.require_activation: True
