Allow email auth in production

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -29,7 +29,7 @@ h.feature.notification: True
 horus.login_redirect: stream
 horus.logout_redirect: index
 
-#horus.allow_email_auth: False
+horus.allow_email_auth: True
 #horus.require_activation: True
 
 # Mail server configuration -- see the pyramid_mailer documentation
