Tweak the onboarding flows
login -> stream

  - Once logged in, the user is taken to the stream.

register -> stream

  - When the user tries to sign up but is already logged in they are
    taken to the stream.

  - The dynamic registration form immediately switches to the activate form.

activate -> onboarding

  - Once activated, the user is taken to onboarding.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -28,11 +28,12 @@ h.feature.claim: True
 h.feature.streamer: True
 h.feature.notification: False
 
-horus.allow_email_auth: True
-horus.require_activation: False
-
 horus.login_redirect: stream
 horus.logout_redirect: index
+horus.register_redirect: stream
+
+horus.allow_email_auth: True
+horus.require_activation: False
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
