--- a/conf/production.ini
+++ b/conf/production.ini
@@ -28,6 +28,8 @@ h.feature.notification: True
 # Used by the local authentication provider
 horus.login_redirect: stream
 horus.logout_redirect: index
+horus.activate_redirect: onboarding
+horus.register_redirect: stream
 
 horus.allow_email_auth: True
 #horus.require_activation: True
