--- a/conf/production.ini
+++ b/conf/production.ini
@@ -28,7 +28,7 @@ h.feature.notification: True
 # Used by the local authentication provider
 horus.login_redirect: stream
 horus.logout_redirect: index
-horus.activate_redirect: onboarding
+horus.activate_redirect: stream
 horus.register_redirect: stream
 
 horus.allow_email_auth: True
