Break out client configuration into a Bundle
In this manner, the client configuration is made more easily
replaceable in downstream deployments through the asset configuration.

Additionally, code shared between the various application pages that
configures the identity and session providers for our account system
lives in one place holding those cross-cutting concerns.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -95,6 +95,17 @@ momentjs:
       contents: h:static/scripts/vendor/moment-timezone-data.js
 
 
+# Configuration
+config:
+  output: scripts/config.min.js
+  filters: uglifyjs
+  contents:
+    - output: scripts/config.js
+      filters: browserify
+      contents:
+        - h:static/scripts/config/accounts.coffee
+
+
 # Application
 app:
   contents:
@@ -128,6 +139,7 @@ app_js:
         - h:static/scripts/*.coffee
         - h:static/scripts/directive/*.coffee
         - h:static/scripts/filter/*.coffee
+    - config
 
 app_css:
   output: styles/app.min.css
