Use rAF for smoother animation of bucket bar

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
     "node-uuid": "^1.4.3",
+    "raf": "^2.0.4",
     "strip-bomify": "^0.1.0",
     "uglify-js": "^2.4.14"
   },
