Add NIPSA filtering (server side)
 - Add "NIPSA" feature flag
 - Add admin package (under accounts, behind the nipsa feature flag)
 - Add "admins" list in the config direcroy
 - Put "admin" flag to the claim data at authentication
 - Implement nipsa filtering
   - to search api
   - to realtime update
   - to stream load_more

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -27,6 +27,7 @@ h.feature.api: True
 h.feature.claim: True
 h.feature.streamer: True
 h.feature.notification: False
+h.feature.nipsa: True
 
 horus.login_redirect: stream
 horus.logout_redirect: index
