--- a/conf/production.ini
+++ b/conf/production.ini
@@ -23,6 +23,7 @@ h.feature.api: True
 h.feature.claim: False
 h.feature.streamer: True
 h.feature.notification: True
+h.feature.nipsa: False
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
