Fix lint and testing errors

--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -6,6 +6,7 @@ h.feature.api: True
 h.feature.claim: True
 h.feature.streamer: True
 h.feature.notification: True
+h.feature.nipsa: True
 
 sqlalchemy.url: sqlite://
 
