Front-end feature flags

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -56,6 +56,7 @@ sqlalchemy.url: sqlite:///.h.db
 
 # http://docs.pylonsproject.org/projects/pyramid-jinja2/en/latest/index.html#jinja2-extensions
 jinja2.extensions: h.jinja_extensions:IncludeRawExtension
+jinja2.filters: json = json.dumps
 
 # Static asset configuration -- see webassets documentation
 # Until the next pyramid_webassets, don't change these.
