--- a/conf/development.ini
+++ b/conf/development.ini
@@ -25,8 +25,9 @@ h.autologin: True
 h.feature.accounts: True
 h.feature.api: True
 h.feature.claim: True
-h.feature.streamer: True
 h.feature.notification: False
+h.feature.queue: True
+h.feature.streamer: True
 
 horus.login_redirect: stream
 horus.logout_redirect: index
