--- a/conf/production.ini
+++ b/conf/production.ini
@@ -21,8 +21,9 @@ use: egg:h
 h.feature.accounts: True
 h.feature.api: True
 h.feature.claim: False
-h.feature.streamer: True
 h.feature.notification: True
+h.feature.queue: True
+h.feature.streamer: True
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
