Disable some features in dev by default
Disable the WebSocket streaming, email notifications, and the NSQ
dependency.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -24,10 +24,10 @@ h.autologin: True
 
 h.feature.accounts: True
 h.feature.api: True
-h.feature.claim: True
+h.feature.claim: False
 h.feature.notification: False
-h.feature.queue: True
-h.feature.streamer: True
+h.feature.queue: False
+h.feature.streamer: False
 
 horus.login_redirect: stream
 horus.logout_redirect: index
