--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -4,8 +4,9 @@ use: egg:h
 h.feature.accounts: True
 h.feature.api: True
 h.feature.claim: True
-h.feature.streamer: True
 h.feature.notification: True
+h.feature.queue: True
+h.feature.streamer: True
 
 sqlalchemy.url: sqlite://
 
