Revert "Merge pull request #2239 from hypothesis/features-cleanup"
This reverts commit f6787df785c8c8e2bdbf4d7b65a9176adad64d19, reversing
changes made to 29d975367171b8d4e69941c3f0e5d40ddfc98ddc.

I'm afraid I've had to revert this:

- it introduced a crashing bug on master (see
  https://github.com/hypothesis/h/pull/2131#discussion_r30692024)
- feature flags are no longer accessible by view functions (the
  configurator object is not available from the request), thus this
  blocks #2131

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -101,13 +101,9 @@ config:
   filters: uglifyjs
   contents:
     - output: scripts/config.js
-      filters:
-        - browserify
-        - jinja2
+      filters: browserify
       contents:
-        - h:static/scripts/config/features.coffee
-      depends:
-        - h:static/scripts/config/*
+        - h:static/scripts/config/accounts.coffee
 
 
 # Application
