--- a/conf/development.ini
+++ b/conf/development.ini
@@ -58,6 +58,7 @@ secret_key: notverysecretafterall
 sqlalchemy.url: sqlite:///.h.db
 
 jinja2.extensions: h.jinja_extensions:IncludeRawExtension
+jinja2.filters: json = json.dumps
 
 webassets.base_dir: h:static
 webassets.base_url: assets
