--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
   - gem install sass
   - gem install compass
+  - pip install -U pip wheel
   - pip install coveralls
   - pip install mandrill
   - pip install pyramid_redis_sessions
@@ -24,6 +25,9 @@ script:
     --assets resource://notarealkey/hypothesis/data"
 after_success:
   - coveralls
+cache:
+  directories:
+    - $HOME/.cache/pip
 notifications:
   irc:
     channels:
