Don't run Python tests twice
This commit adds the frontend tests to `make cover`, so that we don't
need to run the Python tests twice on every build.

When we have it, we can add coverage reporting for frontend tests to the
Makefile.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ install:
   - pip install coveralls pyramid_redis_sessions
   - make
 script:
-  - make test
+  # Run all tests, with coverage if possible
   - make cover
+  # Test building browser extensions
   - hypothesis-buildext conf/testext.ini chrome --base http://localhost
   - hypothesis-buildext conf/testext.ini firefox --base http://localhost
   - "hypothesis-buildext conf/production.ini chrome
