--- a/conf/development.ini
+++ b/conf/development.ini
@@ -5,7 +5,7 @@ pipeline: h
 [app:api]
 use: egg:h#api
 
-basemodel.should_create_all: True
+h.db.should_create_all: True
 
 # Set a default persistent secret for development. DO NOT copy this into a
 # production settings file.
@@ -16,7 +16,7 @@ h.client_secret: nosuchsecret
 [app:h]
 use: egg:h
 
-basemodel.should_create_all: True
+h.db.should_create_all: True
 
 es.host: http://localhost:9200
 
