Don't check line length with pylint: let PEP8 do it.
The `pep8` tool already checks line length and does a better job of
avoiding false positives such as URLs in comments.

--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -8,6 +8,8 @@ pylint:
   enable:
     - relative-import
   disable:
+    - line-too-long  # PEP8 checks this and doesn't complain about
+                     # unavoidable long lines (such as URLs).
     - R0903  # Too few public methods
     - W0142  # Used * or ** magic
   options:
