--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ cache:
   directories:
     - node_modules
     - $HOME/.cache/pip
+before_cache:
+  - rm -f $HOME/.cache/pip/log/debug.log
 notifications:
   irc:
     channels:
