Don't rebuild on every request in dev environment
Until we sort the build artifacts out from the source files using
a *.js glob will catch a mixture of source file and build artifacts.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -137,7 +137,7 @@ app_js:
       contents: h:static/scripts/app.coffee
       depends:
         - h:static/scripts/*.coffee
-        - h:static/scripts/*.js
+        - h:static/scripts/features.js
         - h:static/scripts/directive/*.coffee
         - h:static/scripts/directive/*.js
         - h:static/scripts/filter/*.coffee
