Decaf account/* coffee

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -165,7 +165,7 @@ account_js:
   contents:
     - output: scripts/account.js
       filters: browserify
-      contents: h:static/scripts/account/account.coffee
+      contents: h:static/scripts/account/account.js
       depends: h:static/scripts/account/*
 
 # The inject bundle is intended to be loaded into pages for bootstrapping
