Straightforward API inclusion
Clean up the boundaries between h.api and the rest of the application
so that it can be included in a straightforward manner.

The h.api module becomes more or less oblivious to authentication and
authorization, except that it still defines ACL properties for its
resources and it defines the token route.

The token route can be ripped out next and placed in another module,
since the h.api module needn't even know that OAuth tokens are in use
and in this way it can cease to rely on `request.create_token_response`.

This commit reintroduces pyramid_multiauth as a straightforward way to
support SessionAuthenticationPolicy and RemoteAuthenticationPolicy in
the same application.

The case of the default client in h.auth and the session view callable
are now oblivious to type of authentication policy in use.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -2,17 +2,6 @@
 pipeline: h
 
 
-[app:api]
-use: egg:h#api
-
-h.db.should_create_all: True
-
-# Set a default persistent secret for development. DO NOT copy this into a
-# production settings file.
-h.client_id: nosuchid
-h.client_secret: nosuchsecret
-
-
 [app:h]
 use: egg:h
 
@@ -24,12 +13,18 @@ h.autologin: True
 
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
+multiauth.groupfinder: h.auth.effective_principals
+multiauth.policies: remote session
+multiauth.policy.remote.use: pyramid.authentication.RemoteUserAuthenticationPolicy
+multiauth.policy.session.use: pyramid.authentication.SessionAuthenticationPolicy
+
 pyramid.debug_all: True
 pyramid.reload_templates: True
 pyramid.includes:
     h.session
     pyramid_debugtoolbar
     pyramid_mailer
+    pyramid_multiauth
     pyramid_tm
     h.testing
 
