--- a/conf/production.ini
+++ b/conf/production.ini
@@ -22,9 +22,16 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 #mail.host: localhost
 #mail.port: 25
 
+# Authentication configuration -- see the pyramid_multiauth documentation
+multiauth.groupfinder: h.auth.effective_principals
+multiauth.policies: remote session
+multiauth.policy.remote.use: pyramid.authentication.RemoteUserAuthenticationPolicy
+multiauth.policy.session.use: pyramid.authentication.SessionAuthenticationPolicy
+
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
     pyramid_mailer
+    pyramid_multiauth
     pyramid_redis_sessions
     pyramid_tm
 
