--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -107,7 +107,7 @@ config:
 
 
 # Application
-app:
+app_vendor_js:
   contents:
     - jquery
     - angular
@@ -125,8 +125,6 @@ app:
     - katex
     - momentjs
     - url
-    - app_css
-    - app_js
 
 app_js:
   output: scripts/app.min.js
@@ -161,19 +159,14 @@ app_css:
         - h:static/styles/mixins/*.scss
 
 
-account:
+account_js:
+  output: scripts/account.min.js
+  filters: uglifyjs
   contents:
-    - jquery
-    - angular
-    - angular_bootstrap
-    - angular_route
-    - output: scripts/account.min.js
-      filters: uglifyjs
-      contents:
-        - output: scripts/account.js
-          filters: browserify
-          contents: h:static/scripts/account/account.coffee
-          depends: h:static/scripts/account/*
+    - output: scripts/account.js
+      filters: browserify
+      contents: h:static/scripts/account/account.coffee
+      depends: h:static/scripts/account/*
 
 # The inject bundle is intended to be loaded into pages for bootstrapping
 # the application. It sets up RPC channels for cross-domain communication
@@ -223,10 +216,6 @@ inject_css:
 
 
 # Help page
-help_page:
-  contents:
-    - help_page_css
-
 help_page_css:
   output: styles/help-page.min.css
   filters:
