Upgrade versioneer and version handling
The new versioneer generates pep440 compatible version strings which
means that pip will stop complaining about strange version numbers.

This change also improves the Chrome extension version by augmenting
it with a version name that includes information about the commit
that the extension was built from.

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -2,6 +2,7 @@
   "name": "Hypothesis - Web & PDF Annotation",
   "short_name": "Hypothesis",
   "version": "{{ version }}",
+  "version_name": "{{ version }} ({{ version_name }})",
   "manifest_version": 2,
 
   "description": "Collaboratively annotate, highlight, and tag web pages and PDF documents.",
