--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,11 @@ norecursedirs = env lib node_modules *.egg
 [pep257]
 ignore = D202
 explain = true
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = h/_version.py
+versionfile_build = h/_version.py
+tag_prefix = v
+parentdir_prefix = h-
