Use hashids in group URLs
Rather than exposing raw primary keys in the group URLs, we use hashids
so that the URLs cannot be trivially enumerated. In production, we set a
hashid salt that ensures that other people can't generate our hashids.

--- a/conf/development.ini
+++ b/conf/development.ini
@@ -30,6 +30,7 @@ pyramid.includes:
 # production settings file.
 h.client_id: nosuchid
 h.client_secret: nosuchsecret
+h.hashids.salt: development salt
 
 secret_key: notverysecretafterall
 
