--- a/conf/testext.ini
+++ b/conf/testext.ini
@@ -3,6 +3,8 @@ use: egg:h
 
 sqlalchemy.url: sqlite://
 
+h.hashids.salt: test salt
+
 webassets.base_dir: h:static
 webassets.base_url: assets
 webassets.coffee_no_bare: True
