Consolidate session service and session helpers
This commit does three things. In order of importance:

- wraps the ngResource for managing session state in a service, which
  allows us to expose current session state as `session.state` on that
  instance. This means that components of the application that don't
  want to alter or explicitly fetch session state, but wish to display
  some part of it (such as the current authenticated userid, etc.) can
  do so more easily.
- moves configuration of the session resources into the session service
  rather than requiring configuration from outside via a
  sessionProvider.
- translates the session service to JavaScript from CoffeeScript.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -136,6 +136,7 @@ app_js:
       depends:
         - h:static/scripts/*.coffee
         - h:static/scripts/features.js
+        - h:static/scripts/session.js
         - h:static/scripts/directive/*.coffee
         - h:static/scripts/directive/*.js
         - h:static/scripts/filter/*.js
