Support relative URLs from document info plugins
PDF usages might want to specify relative URLs to get around proxy
restrictions with a custom viewer. Even link tags support relative
URLs for rel=canonical though it's probably a bad idea as a publisher.
In any case, we should clearly just do this.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "description": "The Internet, peer reviewed.",
   "dependencies": {
+    "base-url": "^1.0.0",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
     "clean-css": "2.2.2",
