Add hashids salt to more config files
These are needed to make the tests pass on Travis

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -17,6 +17,8 @@ use: egg:h
 #h.client_id:
 #h.client_secret:
 
+h.hashids.salt: production salt
+
 # Mail server configuration -- see the pyramid_mailer documentation
 mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 #mail.host: localhost
