Consolidate and style the admin interface
This commit brings together "administrator" views into one place -- the
Hypothesis admin console, found at /admin.

So far, the only to admin views we have are for flagging/unflagging
users as NIPSA, and for administering administrative user status. In the
near future, we may also have a feature flag console in here.

- I've moved all the admin views into `h.admin` so that we don't
  confused business logic view functions with administrative view
  functions, and so that in future it is easier to treat the `/admin`
  tree as a single entity for the purposes of permissions, etc.
- I've added an "admin" page layout, which uses Twitter Bootstrap for
  basic styling.
- I've rejigged both the NIPSA and the administrator users pages to make
  use of bootstrap.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -45,6 +45,13 @@ angulartics_ga:
   contents: h:static/scripts/vendor/angulartics-ga.js
 
 
+# Bootstrap (for admin areas only)
+bootstrap:
+  filters: uglifyjs
+  output: scripts/vendor/bootstrap.min.js
+  contents: h:static/scripts/vendor/bootstrap.js
+
+
 # jQuery
 jquery:
   filters: uglifyjs
@@ -93,6 +100,22 @@ momentjs:
     - filters: uglifyjs
       output: scripts/vendor/moment-timezone-data.min.js
       contents: h:static/scripts/vendor/moment-timezone-data.js
+
+
+# Admin areas
+admin_css:
+  output: styles/admin.min.css
+  filters:
+    - compass
+    - cleancss
+    - cssrewrite
+  contents: h:static/styles/admin.scss
+
+admin_js:
+  output: scripts/admin.min.js
+  contents:
+    - jquery
+    - bootstrap
 
 
 # Configuration
