HttpOnly session cookies
This prevents sessions stealing in the case of successful cross-site
scripting attacks.

--- a/conf/production.ini
+++ b/conf/production.ini
@@ -35,6 +35,7 @@ pyramid.includes:
 
 # Redis session configuration -- See pyramid_redis_sessions documentation
 #redis.sessions.secret:
+redis.sessions.cookie_httponly: True
 redis.sessions.cookie_max_age: 2592000
 redis.sessions.timeout: 604800
 
