--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "description": "The Internet, peer reviewed.",
   "dependencies": {
+    "babelify": "^6.1.3",
     "base-url": "^1.0.0",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
@@ -11,10 +12,10 @@
     "coffee-script": "1.7.1",
     "coffeeify": "^1.0.0",
     "diff-match-patch": "^1.0.0",
-    "dom-anchor-fragment": "^1.0.0",
-    "dom-anchor-text-position": "^1.0.1",
-    "dom-anchor-text-quote": "^1.3.0",
-    "dom-seek": "^1.0.0",
+    "dom-anchor-fragment": "^1.0.1",
+    "dom-anchor-text-position": "^1.0.3",
+    "dom-anchor-text-quote": "^1.3.2",
+    "dom-seek": "^1.0.1",
     "es6-promise": "^2.1.0",
     "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
@@ -65,10 +66,6 @@
     "annotator": "./h/static/scripts/vendor/annotator.js",
     "annotator-auth": "./h/static/scripts/vendor/annotator.auth.js",
     "angular": "./h/static/scripts/vendor/angular.js",
-    "dom-anchor-fragment": "./node_modules/dom-anchor-fragment/dist/dom-anchor-fragment.js",
-    "dom-anchor-text-position": "./node_modules/dom-anchor-text-position/dist/dom-anchor-text-position.js",
-    "dom-anchor-text-quote": "./node_modules/dom-anchor-text-quote/dist/dom-anchor-text-quote.js",
-    "dom-seek": "./node_modules/dom-seek/dist/seek.js",
     "es6-promise": "./node_modules/es6-promise/dist/es6-promise.js",
     "hammerjs": "./node_modules/hammerjs/hammer.js",
     "jquery": "./h/static/scripts/vendor/jquery.js",
@@ -95,21 +92,6 @@
         "jquery"
       ]
     },
-    "dom-anchor-fragment": "domAnchorFragment",
-    "dom-anchor-text-position": {
-      "depends": [
-        "dom-seek:seek"
-      ],
-      "exports": "domAnchorTextPosition"
-    },
-    "dom-anchor-text-quote": {
-      "depends": [
-        "diff-match-patch:DiffMatchPatch",
-        "dom-anchor-text-position:TextPositionAnchor"
-      ],
-      "exports": "domAnchorTextQuote"
-    },
-    "dom-seek": "seek",
     "es6-promise": "ES6Promise",
     "hammerjs": "Hammer",
     "jquery": "$",
