Remove more browserify-shim cruft

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "es6-promise": "^2.1.0",
     "extend": "^2.0.0",
     "hammerjs": "^2.0.4",
-    "node-iterator-shim": "^1.0.0",
+    "node-iterator-shim": "^1.0.1",
     "node-uuid": "^1.4.3",
     "raf": "^2.0.4",
     "strip-bomify": "^0.1.0",
@@ -70,8 +70,7 @@
     "hammerjs": "./node_modules/hammerjs/hammer.js",
     "jquery": "./h/static/scripts/vendor/jquery.js",
     "jquery-scrollintoview": "./h/static/scripts/vendor/jquery.scrollintoview.js",
-    "jschannel": "./h/static/scripts/vendor/jschannel.js",
-    "node-iterator-shim": "./node_modules/node-iterator-shim/dist/node-iterator-shim.js"
+    "jschannel": "./h/static/scripts/vendor/jschannel.js"
   },
   "browserify-shim": {
     "annotator": {
@@ -100,7 +99,6 @@
         "jquery"
       ]
     },
-    "jschannel": "Channel",
-    "node-iterator-shim": "nodeIteratorShim"
+    "jschannel": "Channel"
   }
 }
