Refactor auth in the client
Start to take better control over the authentication and authorization
systems of the front end.

- Remove dependency on Annotator Auth plugin. With this change,
  Annotator is completely gone from the Angular application.

- Use angular-jwt and its http interceptor to ensure that auth tokens
  are up-to-date and auth token requests block store requests.

- With the interceptor in place, it's no longer necessary to resolve
  auth before the ng-view controllers.

- Use the session directly for getting the current user. This is in
  line with what is likely to happen for groups, too, soon.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -129,7 +129,9 @@ config:
     - output: scripts/config.js
       filters: browserify
       contents:
-        - h:static/scripts/config/accounts.js
+        - h:static/scripts/config/module.js
+      depends:
+        - h:static/scripts/config/*.js
 
 
 # Application
