--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "1.2.28",
     "angular-animate": "1.2.28",
+    "angular-jwt": "0.0.9",
     "angular-resource": "1.2.28",
     "angular-route": "1.2.28",
     "angulartics": "0.17.2",
@@ -77,7 +78,6 @@
   },
   "browser": {
     "annotator": "./h/static/scripts/vendor/annotator.js",
-    "annotator-auth": "./h/static/scripts/vendor/annotator.auth.js",
     "angular": "./node_modules/angular/angular.js",
     "es6-promise": "./node_modules/es6-promise/dist/es6-promise.js",
     "hammerjs": "./node_modules/hammerjs/hammer.js",
@@ -90,12 +90,6 @@
       "exports": "Annotator",
       "depends": [
         "jquery"
-      ]
-    },
-    "annotator-auth": {
-      "depends": [
-        "jquery",
-        "annotator"
       ]
     },
     "angular": {
